--- a/external/Box2D/proj.win32/libbox2d.vcxproj
+++ b/external/Box2D/proj.win32/libbox2d.vcxproj
@@ -218,7 +218,7 @@
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <DebugInformationFormat>None</DebugInformationFormat>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Lib>
